Fix alignment of modal boxes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,12 +45,11 @@ html, body {
   width: 798px;
   height: 260px;
   color: #ffcc00;
-  margin-left: -420px;
-  
+
   h3 {
-    color: #ffcc00;  
+    color: #ffcc00;
   }
-  
+
   p {
     font-size: 11px;
   }
@@ -61,6 +60,7 @@ html, body {
   background: #5c5d5e image-url('landing-bg.png') no-repeat;
   height: 291px;
   width: 870px;
+  margin-left: -430px;
 
   .modal-middle {
     float: left;
@@ -75,7 +75,7 @@ html, body {
       font-size: 12px;
     }
   }
-  
+
   .modal-right {
     background-image: image-url('unep-wcmc-logo.png');
     background-position: 95px 10px;
@@ -183,7 +183,7 @@ html, body {
   bottom: 0;
   left: 0;
 
-  & > div {
+  #map-content, #right-panel {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -421,7 +421,7 @@ footer {
 
     .validate {
       margin-right: 5px;
-      float:left; 
+      float:left;
     }
 
     div.btn-group {
@@ -461,12 +461,12 @@ footer {
       .btn {
         width: 70px;
       }
-      
+
       select.knowledge {
         float: right;
         width: 250px;
       }
-      
+
       .buttons {
         float: right;
         clear: both;
